# esp-usb-bridge

./: .git-blame-ignore-revs  .pre-commit-config.yaml  astyle-rules.yml  check_copyright_config.yaml  sdkconfig.defaults.esp_prog2  sdkconfig.jtag.defaults  sdkconfig.swd.defaults
components/debug_probe/: CMakeLists.txt  Kconfig  debug_gpio.c  debug_gpio.h  esp_usb_jtag.c  swd.c
components/debug_probe/DAP/Config/: DAP_config.h
components/debug_probe/include/: debug_probe.h
components/serial_handler/: CMakeLists.txt  Kconfig  idf_component.yml  serial_handler.c
components/serial_handler/include/: serial_handler.h
components/util/: CMakeLists.txt  util.c
components/util/include/: led_io.h
main/: CMakeLists.txt  Kconfig.projbuild  eub_vendord.c  eub_vendord.h  main.c  msc.c  noflash.lf  serial_bridge.c  serial_bridge.h
